--- a/index.html
+++ b/index.html
@@ -613,6 +613,14 @@
                     <a href="https://drive.google.com/file/d/1CzPJDL3ibThExJC5OIso0Rjfg3dncc96/view?usp=share_link" target="_blank" class="btn1">Data Analysis and Data Visualization Project</a>
                 </div>
             </div>
+
+            <div class="box tilt">
+                <img src="Screenshot (121).png" alt="">
+                <div class="content">
+                    <a href="https://arvin-007elite.github.io/WEB-DEV-Online-Compiler/" target="_blank" class="btn1">Online Web-dev Previewer and Compiler</a>
+                </div>
+            </div>
+
 <!-- 
             <div class="box tilt">
                 <img src="images/img-3.jpg" alt="">
